css/style.css
.sidebar a {
    color: rgba(63, 49, 48, 0.5);
    display: block;
    padding: 10px 40px 10px 0;
    border-bottom: 1px solid rgba(63, 49, 48, 0.1);
    position: relative;
}

.sidebar {
    width: 25%;
    position: sticky;
    top: 0;
    border: 2px solid #6B6660;
    padding: 0 20px;
    max-height: 100vh;
    overflow: scroll;
}

.sidebar a:last-child {
    border-bottom: none;
}

.sidebar a.active,
.sidebar a:hover {
    color: rgba(63, 49, 48, 1);
    transition: 0.5s;
}

.sidebar a.active::after {
    content: url(../img/sidebar-active.svg);
    position: absolute;
    right: 0;
    top: 15px;
    width: 20px;
}

.mr-10 {
    margin-right: 10px;
}

.ml-10 {
    margin-left: 10px;
}

.ml-30 {
    margin-left: 30px;
}

.mt-0 {
    margin-top: 0;
}

.mt-10 {
    margin-top: 10px !important;
}

.mt-20 {
    margin-top: 20px !important;
}

.mt-30 {
    margin-top: 30px;
}

.mt-50 {
    margin-top: 50px;
}

.content h1 {
    font-size: 1.8em;
    margin: 0;
    color: rgba(63, 49, 48, 1);
}

.content h2,
.content h3,
.content b {
    color: rgba(63, 49, 48, 1);
}

.p-30 {
    padding: 30px;
}

.pl-60 {
    padding-left: 60px;
}

.pt-30 {
    padding-top: 30px;
}

.content {
    width: 50%;
}

.w-20 {
    width: 20px;
}

.w-33 {
    width: 33.33%;
}

.w-40 {
    width: 40%;
}

.w-50 {
    width: 50%;
}

.w-100 {
    width: 100%;
}

footer {
    text-align: center;
}

.align-items-start {
    align-items: flex-start;
}

.content-menu {
    width: 25%;
    position: sticky;
    top: 0;
}

.content-menu nav {
    background: rgba(0, 0, 0, 0.05);
    padding: 15px 30px;
}

.content-menu a {
    color: #3F3130;
    opacity: 0.5;
    margin: 0 0 15px;
    display: block;
}

.content-menu a:hover,
.content-menu a.active {
    opacity: 1;
    transition: 0.5s;
}

.content-menu a.ad {
    opacity: 1;
    margin: 0;
}

.content-menu a.ad:hover {
    opacity: 0.8;
    transition: 0.5s;
}

.light-bg {
    background: url(../img/footer.webp);
    background-size: cover;
    padding: 30px;
    color: white;
}

.mb-15 {
    margin-bottom: 15px;
}

.mb-60 {
    margin-bottom: 60px;
}

#toTop {
    position: fixed;
    bottom: 20px;
    left: 10px;
    display: none;
    background: transparent;
    border: none;
    padding: 0;
}

.link-btn {
    color: #815F42;
    display: block;
    text-align: center;
}

.link-btn::before {
    display: inline-block;
    width: 0;
    height: 0;
    border-top: 4px solid transparent;
    border-left: 7px solid #815F42;
    border-bottom: 4px solid transparent;
    content: '';
    margin: 0 20px 0 0;
}

.link-btn::after {
    display: inline-block;
    width: 0;
    height: 0;
    border-top: 4px solid transparent;
    border-right: 7px solid #815F42;
    border-bottom: 4px solid transparent;
    content: '';
    margin: 0 0 0 20px;
}

button {
    background: transparent;
    border: none;
    transition: 0.5s;
}

button:hover {
    cursor: pointer;
}

.pos-fixed {
    position: fixed;
}

#contact {
    right: 10px;
    bottom: 30px;
    padding: 0;
}

#zalo-mess {
    right: 10px;
    bottom: 90px;
    display: none;
}

.show {
    display: flex !important;
    flex-direction: column;
    align-items: center;
    animation-name: slideIn;
    animation-duration: 0.5s;
}

.white-bg {
    background: white;
}

@keyframes slideIn {
    from {
        bottom: 70px;
        opacity: 0;
    }

    to {
        bottom: 90px;
        opacity: 1;
    }
}

.brown {
    color: #815F42;
}

.max-width-30 {
    max-width: 30px;
}

.max-width-100 {
    max-width: 100px;
}

.max-width-600 {
    max-width: 600px;
}

.m-auto {
    margin-left: auto;
    margin-right: auto;
}

.m-0 {
    margin: 0;
}

.line-through {
    text-decoration: line-through;
}

.orange {
    color: #ee4d2d;
}

.border {
    border: 1px solid rgba(0, 0, 0, 0.1);
}

.tabs {
    overflow: hidden;
    border-bottom: 1px solid #E4DBD4;
    min-width: 280px;
}

.tab-content {
    display: none;
}

.tab-link {
    color: #695F56;
    font-family: Afacad, sans-serif;
    opacity: 0.5;
    transition: 0.5s;
}

.tab-link.active {
    opacity: 1;
    border-bottom: 4px solid #ee4d2d;
}

.size-btn {
    border: 1px solid #695F56;
    background: white;
    height: 30px;
    padding: 5px 20px;
    border-radius: 5px;
    color: #695F56;
}

.size-btn.active {
    color: #ee4d2d;
    border: 1px solid #ee4d2d;
    transition: 0.5s;
}

.size-btn.active::after {
    content: url(../img/tick.svg);
    position: absolute;
    top:0;
    right: 0;
}

.opacity-05 {
    opacity: 0.5;
}

.image-center {
    margin-left: 50%;
    transform: translateX(-50%);
}

.hinh-mo-ta {
    max-width: 50%;
    max-height: 450px;
}

.content-menu a.primary-btn,
.content-menu a.w-100 {
    color: white;
    opacity: 1;
}

footer a {
    color: rgba(63, 49, 48, 0.5);
}

footer a:hover {
    color: rgba(63, 49, 48, 1);
}

.ava {
    height: 30px;
    width: 30px;
    display: inline-block;
    border-radius: 15px;
    vertical-align: text-bottom;
    margin: 0 5px 0 0;
}

.overlay span {
    color: white;
}

.overlay .drop-down-button::after,
.overlay .arrow-up.drop-down-button::after {
    display: none;
}

.overlay .drop-down-button span::after {
    content: url(../img/white-drop-down-icon.svg);
    position: relative;
    display: inline-block;
    top: -1px;
    width: 10px;
    left: 10px;
}

.overlay .arrow-up.drop-down-button span::after {
    content: url(../img/white-arrow-up.svg);
}

@media screen and (max-width:992px) {
    .pl-60 {
        padding-left: 40px;
    }

    .pr-60 {
        padding-right: 40px;
    }

    .mb-60 {
        margin-bottom: 30px;
    }

    .w-33 {
        width: 100%;
    }

    .w-33.pl-15,
    .w-33.pl-15 .m-0.pl-15,
    .w-33.pl-30 {
        padding-left: 0;
    }
}

@media screen and (max-width:767px) {
    .sidebar, .content-menu nav {
        display: none;
    }

    .content {
        width: 100%;
    }

    .pl-60 {
        padding-left: 15px;
    }

    .pr-60 {
        padding-right: 15px;
    }

    .mt-50 {
        margin-top: 30px;
    }

    .content-menu {
        width: 100%;
        position: relative;
        top: 10px;
    }

    #nhan-xet .w-50 {
        width: 100%;
    }

    .hinh-mo-ta {
        max-width: 100%;
    }
    
    footer .d-flex.container {
        flex-direction: column;
        padding: 0 0 30px;
    }
}

